# jirax

./: .gitignore  README.md  config.example.toml  imghdr.py  jirax.py  list_projects.py  pyproject.toml
jirax/: __init__.py  __main__.py  jirax.py  list_projects.py
tests/: test_jira_extractor.py.old  test_jirax.py
